--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -41,6 +41,11 @@ Scanner:
 
   scanners:
 
+    random:
+      plugin: random
+      like: LogLike
+      point_number: 10
+
     de:
       plugin: diver
       like: LogLike
@@ -60,6 +65,7 @@ Scanner:
 
     twalk:
       plugin: twalk
+      like: LogLike
 
     polychord:
       plugin: polychord
