Fixed comments in spartan 	modified:   yaml_files/spartan.yaml

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -1,7 +1,9 @@
 ##########################################################################
 ## GAMBIT configuration for an ultra-minimal MultiNest scan of a toy model.
 ##
-## Only needs ExampleBit_A and a scanner (Diver, MultiNest, GreAT or TWalk).
+## Only needs ExampleBit_A and a scanner (either one of the built-ins like
+## the random sampler or TWalk, or an external like Diver, MultiNest,
+## GreAT or Polychord).
 ##########################################################################
 
 
