Added capability to extract S8 (sigma * sqrt(Omega_b/0.3))

--- a/yaml_files/CosmoBit_testCosmo.yaml
+++ b/yaml_files/CosmoBit_testCosmo.yaml
@@ -112,6 +112,11 @@ ObsLikes:
     module:       CosmoBit
     type:         std::vector<double>
 
+  - purpose:      Observable
+    capability:   Sigma8
+    module:       CosmoBit
+    type:         double
+
 #======== Rule entries ========
 Rules:
 
