Another Mathematica fix (maybe the final?)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -315,6 +315,8 @@ else()
         set(HAVE_MATHEMATICA 1)
         set(MATHEMATICA_WSTP_H "${Mathematica_WSTP_INCLUDE_DIR}/wstp.h")
         set(MATHEMATICA_KERNEL "${Mathematica_KERNEL_EXECUTABLE}")
+        set(MATHEMATICA_WSTP_VERSION_MAJOR ${Mathematica_WSTP_VERSION_MAJOR})
+        set(MATHEMATICA_WSTP_VERSION_MINOR ${Mathematica_WSTP_VERSION_MINOR})
       else()
         message("${BoldRed}  WSTP not found. Please make sure it is installed before attempting to use Mathematica backends.${ColourReset}")
         set(HAVE_MATHEMATICA 0)
