--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -21,11 +21,16 @@ Priors:
 
 Printer:
 
-  printer: hdf5
+  printer: sqlite
   options:
-    output_file: "results.hdf5"
-    group: "/spartan"
-    delete_file_on_restart: true
+    output_file: "results.sql"
+    table_name: "spartan"
+
+  #printer: hdf5
+  #options:
+  #  output_file: "results.hdf5"
+  #  group: "/spartan"
+  #  delete_file_on_restart: true
 
   #printer: ascii
   #options:
