--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -26,6 +26,7 @@ Printer:
     output_file: "results.sql"
     table_name: "spartan"
     buffer_length: 1000
+    delete_file_on_restart: true
 
   #printer: hdf5
   #options:
@@ -72,7 +73,8 @@ Scanner:
     twalk:
       plugin: twalk
       like: LogLike
-
+      sqrtR: 1.001
+ 
     polychord:
       plugin: polychord
       like:  LogLike
