--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -321,7 +321,7 @@ else()
       endif()
     elseif(DEFINED Mathematica_Invalid_License AND NOT IGNORE_MATHEMATICA_LICENSE)
       message("${BoldRed}   Mathematica found but with an invalid license. Backends using Mathematica will be disabled.${ColourReset}")
-      message("${BoldRed}   If you want to ignore this license check, please add -DIGNORE_MATHEMATICA_LICENSE=True to your cmake command.${ColourReset}")
+      message("${BoldRed}   To ignore this license check, add -DIGNORE_MATHEMATICA_LICENSE=True to your cmake command.${ColourReset}")
       set(HAVE_MATHEMATICA 0)
     else()
       message("${BoldRed}   Mathematica not found. Backends using Mathematica will be disabled.${ColourReset}")
