--- a/yaml_files/spartan_NUHM1.yaml
+++ b/yaml_files/spartan_NUHM1.yaml
@@ -1,5 +1,5 @@
 ##########################################################################
-## GAMBIT configuration for an ultra-minimal random scan of the CMSSM.
+## GAMBIT configuration for an ultra-minimal random scan of the NUHM1.
 ##
 ## Only needs example modules ExampleBit_A and ExampleBit_B,
 ## plus example backends libfirst and libFortran.
@@ -68,7 +68,7 @@ Scanner:
 
 ObsLikes:
 
-  # Test CMSSM, ExampleBit_A and ExampleBit_B
+  # Test NUHM1, ExampleBit_A and ExampleBit_B
   - purpose:      LogLike
     capability:   Example_lnL_B
     type:         double
@@ -139,7 +139,7 @@ Logger:
 
 KeyValues:
 
-  default_output_path: "runs/spartan_CMSSM"
+  default_output_path: "runs/spartan_NUHM1"
 
   # Some example keys and subkeys
   my_key: 123
