--- a/yaml_files/spartan_NUHM1.yaml
+++ b/yaml_files/spartan_NUHM1.yaml
@@ -109,7 +109,7 @@ Rules:
     - {capability: someFunction, backend: LibFirst, version: 1.1}
 
   - capability:    xsection
-    module: ExampleBit_B
+    module: ExampleBit_A
     options:
       scale: 15.5
 
