--- a/yaml_files/include/LCDM_dNeff_Smu_scan.yaml
+++ b/yaml_files/include/LCDM_dNeff_Smu_scan.yaml
@@ -26,7 +26,7 @@ tau_reio:
   range: [0.004,0.20]
 dNeff:
   prior_type: flat
-  range: [0.0,2.]
+  range: [-2.,2.]
 Smu:
   prior_type: flat
   range: [0.06,2]
