New ColliderBit/ColliderGUM compiles 	modified:   ColliderBit/include/gambit/ColliderBit/ColliderBit_rollcall.hpp 	modified:   ColliderBit/include/gambit/ColliderBit/analyses/HEPUtilsAnalysisContainer.hpp 	modified:   ColliderBit/include/gambit/ColliderBit/colliders/ColliderPythia.hpp 	modified:   ColliderBit/include/gambit/ColliderBit/colliders/collider_rollcall.hpp 	modified:   ColliderBit/include/gambit/ColliderBit/detectors/BuckFast.hpp 	modified:   ColliderBit/src/ColliderBit_eventloop.cpp 	deleted:    ColliderBit/src/colliders/Pythia_SUSY_LHC_13TeV.cpp 	deleted:    ColliderBit/src/colliders/Pythia_SUSY_LHC_8TeV.cpp 	deleted:    ColliderBit/src/colliders/Pythia_external.cpp 	deleted:    ColliderBit/src/colliders/Pythia_glusq_LHC_8TeV.cpp 	modified:   PrecisionBit/include/gambit/PrecisionBit/PrecisionBit_rollcall.hpp 	modified:   Utils/scripts/harvesting_tools.py 	modified:   yaml_files/CMSSM.yaml

--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -502,22 +502,16 @@ Rules:
       ms_error: 5.E-03
 
   # ATLAS detector simulation
-  - capability: SimpleSmearingSim
-    type: "ColliderBit::BuckFastSmearATLAS"
-    function: getBuckFastATLAS
+  - capability: ATLASDetectorSim
     options:
       partonOnly: [false]
       antiktR: [0.4]
-      useDetector: [true]
 
   # CMS detector simulation
-  - capability: SimpleSmearingSim
-    type: "ColliderBit::BuckFastSmearCMS"
-    function: getBuckFastCMS
+  - capability: CMSDetectorSim
     options:
       partonOnly: [false]
       antiktR: [0.4]
-      useDetector: [true]
 
   # ATLAS analysis setup.
   - capability: ATLASAnalysisContainer
