--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -559,7 +559,8 @@ Rules:
 
   # Define Monte Carlo event simulator and associated options.
   - capability:  HardScatteringSim
-    function:  getPythia
+    type: ColliderPythia_defaultversion
+    function: getPythia
     options:
       # Pythia_doc_path defaults to the xmldoc directory of the default Pythia
       # backend. So, this must only be set if the user chooses a different Pythia.
