--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -501,7 +501,7 @@ Rules:
       ms_central: 95.E-03
       ms_error: 5.E-03
 
-  # Choose particle colliders to simulate, and set event loop convergence options.
+  # Choose colliders to simulate and their convergence settings, and pick analyses to run with each collider.
   - capability: RunMC
     function: operateLHCLoop
     options:
@@ -515,64 +515,57 @@ Rules:
         all_analyses_must_converge: false
         all_SR_must_converge: false
         maxFailedEvents: 10
+        analyses:
+          - CMS_13TeV_0LEP_36invfb
+          - CMS_13TeV_1LEPbb_36invfb
+          - CMS_13TeV_2OSLEP_36invfb
+          - CMS_13TeV_2LEPsoft_36invfb
+          - CMS_13TeV_1LEPStop_36invfb
+          - CMS_13TeV_2LEPStop_36invfb
+          - CMS_13TeV_MultiLEP_36invfb
+          - CMS_13TeV_MONOJET_36invfb
+          - ATLAS_13TeV_0LEP_36invfb
+          - ATLAS_13TeV_MultiLEP_36invfb
+          - ATLAS_13TeV_0LEPStop_36invfb
+          - ATLAS_13TeV_2LEPStop_36invfb
+          - ATLAS_13TeV_2bMET_36invfb
+        # - ATLAS_13TeV_RJ3L_lowmass_36invfb
+        # - ATLAS_13TeV_1LEPStop_36invfb
+        # The last two analyses depend on ROOT.
 
-  # Choose Monte Carlo event simulator and associated options.
+  # Choose Monte Carlo event simulator and options.
   - capability:  HardScatteringSim
+    type: ColliderPythia_defaultversion
     function: getPythia
     options:
       LHC_13TeV:
         # 0.028 fb corresponds to ~1 expected event at L = 36 fb^-1.
         xsec_veto: 0.028
         pythia_settings:
-          - "Print:quiet = on"
-          - "PartonLevel:MPI = off"
-          - "PartonLevel:ISR = on"
-          - "PartonLevel:FSR = on"
-          - "HadronLevel:all = on"
-          - "SUSY:all = on"
-          - "TauDecays:mode = 0"
-          - "TimeShower:pTmin = 2"
+          - Print:quiet = on
+          - PartonLevel:MPI = off
+          - PartonLevel:ISR = on
+          - PartonLevel:FSR = on
+          - HadronLevel:all = on
+          - SUSY:all = on
+          - TauDecays:mode = 0
+          - TimeShower:pTmin = 2
 
-  # ATLAS detector simulation
+  # Choose ATLAS detector simulation and options.
   - capability: ATLASDetectorSim
     options:
       LHC_13TeV:
         partonOnly: false
         antiktR: 0.4
 
-  # CMS detector simulation
+  # Choose CMS detector simulation and options.
   - capability: CMSDetectorSim
     options:
       LHC_13TeV:
         partonOnly: false
         antiktR: 0.4
 
-  # Analyses to run
-  - capability: ATLASAnalysisContainer
-    options:
-      LHC_13TeV:
-        - ATLAS_13TeV_0LEP_36invfb
-        - ATLAS_13TeV_MultiLEP_36invfb
-        - ATLAS_13TeV_0LEPStop_36invfb
-        - ATLAS_13TeV_2LEPStop_36invfb
-        - ATLAS_13TeV_2bMET_36invfb
-      # - ATLAS_13TeV_RJ3L_lowmass_36invfb
-      # - ATLAS_13TeV_1LEPStop_36invfb
-      # The last two analyses depend on ROOT.
-
-  - capability: CMSAnalysisContainer
-    options:
-      LHC_13TeV:
-        - CMS_13TeV_0LEP_36invfb
-        - CMS_13TeV_1LEPbb_36invfb
-        - CMS_13TeV_2OSLEP_36invfb
-        - CMS_13TeV_2LEPsoft_36invfb
-        - CMS_13TeV_1LEPStop_36invfb
-        - CMS_13TeV_2LEPStop_36invfb
-        - CMS_13TeV_MultiLEP_36invfb
-        - CMS_13TeV_MONOJET_36invfb
-
-  # Choose which type of marginalised Poisson likelihood to use for LHC likelihoods
+  # Choose LHC likelihood form and options.
   - capability: LHC_LogLikes
     backends:
     - {capability: lnlike_marg_poisson_lognormal_error}
@@ -580,8 +573,6 @@ Rules:
       covariance_marg_convthres_abs: 0.05
       covariance_marg_convthres_rel: 0.05
       covariance_nsamples_start: 100000
-
-
 
 
 Logger:
