Implemented Pantheon Likelihood (no  proper treatment of nuissance param M, yet! Fixed by hand.)

--- a/yaml_files/CosmoBit_testCosmo.yaml
+++ b/yaml_files/CosmoBit_testCosmo.yaml
@@ -78,6 +78,11 @@ ObsLikes:
     type:         double
 
   - purpose:      LogLike
+    capability:   Pantheon_LogLike
+    module:       CosmoBit
+    type:         double
+
+  - purpose:      LogLike
     capability:   compute_Planck_high_TT_loglike
     module:       CosmoBit
     type:         double
