Updated CosmoBit_testCosmo.yaml to include Pantheon like + cosmo nuisance params

--- a/yaml_files/CosmoBit_testCosmo.yaml
+++ b/yaml_files/CosmoBit_testCosmo.yaml
@@ -30,6 +30,9 @@ Parameters:
 
  # nuisance parameters in Planck likelihood
  Planck_lite: !import include/Planck_lite_scan.yaml
+ 
+ # nuisance paramters for other cosmological likelihoods
+ cosmo_nuisance_params: !import include/cosmo_nuisance_params.yaml
 
 #======== Prior setup ========
 Priors:
