update cosmo_nuisance_params to gaussian prior in M

--- a/yaml_files/include/cosmo_nuisance_params.yaml
+++ b/yaml_files/include/cosmo_nuisance_params.yaml
@@ -7,6 +7,7 @@
 ##########################################################################
 
 M_AbsMag_SNe:
-  prior_type: flat
-  range: [-19.024,-19.016]
-
+  prior_type: gaussian
+  range: [-19.032,-19.008]
+  mean: [-19.3]
+  sigs: [0.004]
